--- a/results_accessory_tissues.rmd
+++ b/results_accessory_tissues.rmd
@@ -7,14 +7,14 @@ source("scripts/summary_dataframes.R")
 
 
 #Accessory costs
-Overall results:
-- Accessory costs higher for bigger seeds
-- A number of species show fairly consistent declines in accessory costs with various measures of "bigger", including size, age, RA. Other species show no patterns
-- 9 (of 14) species decrease the proportion of reproductive investment in "pre-pollination" tissues as their RA increases. in other words, they get better returns on investment the more they invest.
-- Species very different in which accessory tissues they invest the most in - which reflects the differences in basic structure (i.e. Banksia cones), but also more subtlely that some species abort lots of buds (pre-pollination aborted), while other species abort more fully formed flowers
-- For most of the statistical analyses, the youngest site has been removed, since it included individuals that were harvested while flowering (and therefore never "got to" set fruit) and automatically have no "successful" reproduction. There are of course some individuals like this at other ages as well, but far fewer
+###Overall results 
+- Accessory costs higher for bigger seeds  
+- A number of species show fairly consistent declines in accessory costs with various measures of "bigger", including size, age, RA. Other species show no patterns  
+- 9 (of 14) species decrease the proportion of reproductive investment in "pre-pollination" tissues as their RA increases. in other words, they get better returns on investment the more they invest.  
+- Species very different in which accessory tissues they invest the most in - which reflects the differences in basic structure (i.e. Banksia cones), but also more subtlely that some species abort lots of buds (pre-pollination aborted), while other species abort more fully formed flowers  
+- For most of the statistical analyses, the youngest site has been removed, since it included individuals that were harvested while flowering (and therefore never "got to" set fruit) and automatically have no "successful" reproduction. There are of course some individuals like this at other ages as well, but far fewer  
 
-#Generic functions for most plotting below
+###Generic functions for most plotting below
 ```{r, echo=FALSE,results='hide', message=FALSE}
 plot_yvar_vs_xvar <- function(data, yvar = "y", xvar = "x", ...) {
   Y <- data[[yvar]]
@@ -41,9 +41,9 @@ summarise_all_fits <- function(x) {
 ```
 
 
-#How do accessory costs shift with seed size?
-Larger-seeded species have higher accessory costs. 
-Also shown in other studies and suggested as a mechanism for why angiosperms were able to have such small seeds (relative to gymnosperms, with no decrease in proportional accessory costs with decreasing size)
+###How do accessory costs shift with seed size?
+- Larger-seeded species have higher accessory costs. 
+- Also shown in other studies and suggested as a mechanism for why angiosperms were able to have such small seeds (relative to gymnosperms, with no decrease in proportional accessory costs - with decreasing size)  
 ```{r, echo=FALSE,message=FALSE}
 yvar <- "PerAcc_mean"
 xvar <- "seed_size"
@@ -56,8 +56,8 @@ summary(mod)
 anova(mod)
 ```
 
-#Do species differ in the proportional energy allocated to propagules (vs. accessory tissues)
-COER, EPMI, HEPU, LEES, PILI invest the most energy in propagules
+###Do species differ in the proportional energy allocated to propagules (vs. accessory tissues)  
+- COER, EPMI, HEPU, LEES, PILI invest the most energy in propagules  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPropagule"
 xvar <- "species"
@@ -69,8 +69,8 @@ mod <- lm(asin(sqrt(PerPropagule)) ~ species, data)
 summary(mod)
 ```
 
-#Do species differ in the proportional energy allocated to aborted pre-pollination tissues
-BOLE, EPMI, GRSP, HATE invest the most energy in aborted pre-pollination tissues
+###Do species differ in the proportional energy allocated to aborted pre-pollination tissues
+- BOLE, EPMI, GRSP, HATE invest the most energy in aborted pre-pollination tissues  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPrePol_A"
 xvar <- "species"
@@ -83,12 +83,12 @@ mod <- lm(asin(sqrt(PerPrePol_A)) ~ species, data)
 summary(mod)
 ```
 
-#Do individual species decrease accessory costs as they increase in size, age or RA?
-First looking at size:
-PerAcc is arcsine transformed, size is log transformed
-COER, HATE, and PILI show a significant decrease in accessory costs with increasing size (p<0.05)
-GRSP shows a marginally significant decrease in accessory costs with increasing size (0.05<p<0.10)
-PEPU shows a marginally significant INCREASE in accessory costs with increasing size (0.05<p<0.10)
+##Do individual species decrease accessory costs as they increase in size, age or RA?
+###Change in accesory costs With size:  
+- PerAcc is arcsine transformed, size is log transformed  
+- COER, HATE, and PILI show a significant decrease in accessory costs with increasing size (p<0.05)  
+- GRSP shows a marginally significant decrease in accessory costs with increasing size (0.05<p<0.10)  
+- PEPU shows a marginally significant INCREASE in accessory costs with increasing size (0.05<p<0.10)  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerAcc"
 xvar <- "FinalWeight"
@@ -114,11 +114,11 @@ for(spp in names(data)) {
 
 ```
 
-With respect to age:
-PerAcc is arcsine transformed, age is log transformed
-BOLE, COER, GRSP, HATE, HEPU, PELA show a significant decrease in accessory costs with increasing age (p<0.05)
-EPMI, GRBU shows a marginally significant decrease in accessory costs with increasing age (0.05<p<0.10)
-PUTU shows a sig INCREASE in accessory costs with increasing age
+###Change in accesory costs With age:
+- PerAcc is arcsine transformed, age is log transformed  
+- BOLE, COER, GRSP, HATE, HEPU, PELA show a significant decrease in accessory costs with increasing age (p<0.05)  
+- EPMI, GRBU shows a marginally significant decrease in accessory costs with increasing age (0.05<p<0.10)  
+- PUTU shows a sig INCREASE in accessory costs with increasing age  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerAcc"
 xvar <- "age"
@@ -144,10 +144,10 @@ for(spp in names(data)) {
 
 ```
 
-With respect to RA:
-both RA and PerAcc are arcsine transformed
-BAER, COER, GRBU, GRSP, HATE, LEES, PELA, PEPU show a significant decrease in accessory costs with increasing RA (p<0.05)
-BOLE shows a marginally significant decrease in accessory costs with increasing RA (p ~ 0.10)
+###Change in accesory costs With respect to RA:  
+- both RA and PerAcc are arcsine transformed  
+- BAER, COER, GRBU, GRSP, HATE, LEES, PELA, PEPU show a significant decrease in accessory costs with increasing RA (p<0.05)  
+- BOLE shows a marginally significant decrease in accessory costs with increasing RA (p ~ 0.10)  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerAcc"
 xvar <- "RA"
@@ -172,14 +172,14 @@ for(spp in names(data)) {
 }
 
 ```
-Overall, proportion of energy allocation to accessory tissues (versus propagules) is best explained by RA
+Overall, proportion of energy allocation to accessory tissues (versus propagules) is best explained by RA  
 
 
-#Next considering if the amount of energy spent on aborted buds shifts with age, size, RA
-First looking at size:
-PerPrePol_A is arcsine transformed, size is log transformed
-GRSP, HATE, HEPU show a significant decrease in aborted buds with increasing size (p<0.05)
-PUTU shows a marginally significant decrease in accessory costs with increasing RA (p ~ 0.10)
+##Next considering if the amount of energy spent on aborted buds shifts with age, size, RA  
+###Change in aborted bud investment with size:  
+- PerPrePol_A is arcsine transformed, size is log transformed  
+- GRSP, HATE, HEPU show a significant decrease in aborted buds with increasing size (p<0.05)  
+- PUTU shows a marginally significant decrease in accessory costs with increasing RA (p ~ 0.10)  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPrePol_A"
 xvar <- "FinalWeight"
@@ -205,10 +205,10 @@ for(spp in names(data)) {
 
 ```
 
-With respect to age:
-PerPrePol_A is arcsine transformed, age is log transformed
-BAER, BOLE, COER, EPMI, LEES, PHPH, PILI show a significant decrease in aborted buds with increasing age (p<0.05)
-GRSP, HATE show a marginally significant decrease in aborted buds with increasing age (0.05<p<0.10)
+###Change in aborted bud investment with respect to age:  
+- PerPrePol_A is arcsine transformed, age is log transformed  
+- BAER, BOLE, COER, EPMI, LEES, PHPH, PILI show a significant decrease in aborted buds with increasing age (p<0.05)  
+- GRSP, HATE show a marginally significant decrease in aborted buds with increasing age (0.05<p<0.10)  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPrePol_A"
 xvar <- "age"
@@ -234,9 +234,9 @@ for(spp in names(data)) {
 
 ```
 
-With respect to RA:
-both RA and PerPrePol_A are arcsine transformed
-BAER, BOLE, COER, GRSP, HATE, LEES, PELA, PEPU show a significant decrease in aborted buds with increasing RA (p<0.05)
+###Change in aborted bud investment with respect to RA:
+- both RA and PerPrePol_A are arcsine transformed  
+- BAER, BOLE, COER, GRSP, HATE, LEES, PELA, PEPU show a significant decrease in aborted buds with increasing RA (p<0.05)  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPrePol_A"
 xvar <- "RA"
@@ -262,15 +262,11 @@ for(spp in names(data)) {
 
 ```
 
-
-
-
-
-#Do individual species decrease total pre-pollination costs as they increase in size, age or RA?
-First looking at size:
-PerPrePol_All is arcsine transformed, size is log transformed
-GRSP, HATE show a significant decrease in total pre-pollination costs with increasing size (p<0.05)
-HEPU shows a marginally significant decrease in total pre-pollination costs with increasing size (0.05<p<0.10)
+##Do individual species decrease total pre-pollination costs as they increase in size, age or RA?  
+###Do total pre-pollination costs change with respect to size:  
+- PerPrePol_All is arcsine transformed, size is log transformed  
+- GRSP, HATE show a significant decrease in total pre-pollination costs with increasing size (p<0.05)  
+- HEPU shows a marginally significant decrease in total pre-pollination costs with increasing size (0.05<p<0.10)  
 
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPrePol_All"
@@ -297,11 +293,11 @@ for(spp in names(data)) {
 
 ```
 
-With respect to age:
-PerPrePol_All is arcsine transformed, age is log transformed
-BAER, BOLE, COER, HEPU, LEES, PILI show a significant decrease in total pre-pollination costs with increasing age (p<0.05)
-EPMI, GRBU, GRSP, HATE shows a marginally significant decrease in total pre-pollination costs with increasing age (0.05<p<0.10)
-PUTU shows a sig INCREASE in total pre-pollination  costs with increasing age
+###Do total pre-pollination costs change with respect to age:
+- PerPrePol_All is arcsine transformed, age is log transformed  
+- BAER, BOLE, COER, HEPU, LEES, PILI show a significant decrease in total pre-pollination costs with increasing age (p<0.05)  
+- EPMI, GRBU, GRSP, HATE shows a marginally significant decrease in total pre-pollination costs with increasing age (0.05<p<0.10)  
+- PUTU shows a sig INCREASE in total pre-pollination  costs with increasing age  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPrePol_All"
 xvar <- "age"
@@ -327,10 +323,10 @@ for(spp in names(data)) {
 
 ```
 
-With respect to RA:
-both RA and PerPrePol_All are arcsine transformed
-BAER, BOLE, COER, GRSP, HATE, HEPU, LEES, PEPU show a significant decrease in total pre-pollination costs with increasing RA (p<0.05)
-PELA shows a marginally significant decrease in total pre-pollination costs with increasing RA (0.05<p<0.10)
+### Do total pre-pollination costs change with respect to RA:  
+- both RA and PerPrePol_All are arcsine transformed    
+- BAER, BOLE, COER, GRSP, HATE, HEPU, LEES, PEPU show a significant decrease in total pre-pollination costs with increasing RA (p<0.05)  
+- PELA shows a marginally significant decrease in total pre-pollination costs with increasing RA (0.05<p<0.10)  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPrePol_All"
 xvar <- "RA"
@@ -356,10 +352,10 @@ for(spp in names(data)) {
 
 ```
 
-With respect to Reproductive Investment:
-PerPrePol_All is arcsine transformed, ReproInv is log transformed
-COER, GRBU, GRSP, HATE, PEPU, PHPH, PILI show a significant decrease in total pre-pollination costs with increasing reproductive investment (p<0.05)
-LEES shows a marginally significant decrease in total pre-pollination costs with increasing reproductive investment (0.05<p<0.10)
+### Do total pre-pollination costs change with respect to Reproductive Investment:
+- PerPrePol_All is arcsine transformed, ReproInv is log transformed  
+- COER, GRBU, GRSP, HATE, PEPU, PHPH, PILI show a significant decrease in total pre-pollination costs with increasing reproductive investment (p<0.05)  
+- LEES shows a marginally significant decrease in total pre-pollination costs with increasing reproductive investment (0.05<p<0.10)  
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "PerPrePol_All"
 xvar <- "ReproInv"
@@ -386,8 +382,8 @@ for(spp in names(data)) {
 ```
 
 
-#For each species, look at pattern of investment in different tissues across ages
-Most obvious pattern is that different species invest more or less in different tissue types - across all species this is bigger pattern than shifts across age
+###For each species, look at pattern of investment in different tissues across ages  
+- Most obvious pattern is that different species invest more or less in different tissue types - across all species this is bigger pattern than shifts across age  
 ```{r, echo=FALSE, message=FALSE}
 plot_Acc_by_Spp <- function(spp) {
 data2 <- filter(SummarySppAge, species==spp)
@@ -405,8 +401,9 @@ for(n in names(labels.spp)) {
   }
 ```
 
-#Using models that look at all the various factors at once - but need to include species in these models and probably use some sort of a MANOVA
-also issues because significance of various variables changes enormously with transformations
+###Considering relative effect of different accessory costs on RA
+- Using models that look at all the various factors at once - but need to include species in these models and probably use some sort of a MANOVA  
+- also issues because significance of various variables changes enormously with transformations  
 ```{r, echo=FALSE, message=FALSE}
 mod <- lm(asin(sqrt(RA))~asin(sqrt(PerPropagule))+asin(sqrt(PerPrePol_A))+ asin(sqrt(PerPrePol_S))+ asin(sqrt(PerPostPol_A))+ asin(sqrt(PerPackDisp)) + species,data=subset(SummaryInd,Total>0))
 
